# petr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  petr.cabal  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  on_main_commit.yml  rust_test.yml
design_documents/: syntax.md  types_and_effects.md
pete/: Cargo.toml
pete/src/: main.rs
petr-api/: Cargo.toml  tmp.swim
petr-api/src/: lib.rs
petr-ast/: Cargo.toml
petr-ast/src/: ast.rs  comments.rs  dependency.rs  lib.rs  pretty_print.rs
petr-bind/: Cargo.toml
petr-bind/src/: binder.rs  impls.rs  lib.rs
petr-bind/src/binder/: tests.rs
petr-cli/: Cargo.toml
petr-cli/src/: main.rs
petr-codegen/: Cargo.toml
petr-codegen/src/: lib.rs
petr-fmt/: Cargo.toml
petr-fmt/src/: config.rs  constants.rs  ctx.rs  lib.rs  main.rs  tests.rs
petr-ir/: Cargo.toml
petr-ir/src/: error.rs  lib.rs  opcodes.rs
petr-lower/: Cargo.toml  tmp
petr-lower/src/: lib.rs  opcodes.rs
petr-manifest/: Cargo.toml
petr-parse/: Cargo.toml
petr-parse/src/: lib.rs  parse_to_ast.rs  parser.rs
petr-parse/src/parser/: lexer.rs  tests.rs
petr-parse/src/parser/lexer/: tests.rs
petr-pkg/: Cargo.toml
petr-pkg/src/: lib.rs  manifest.rs
petr-playground/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
petr-playground/src/: lib.rs  tests.rs
petr-profiling/: Cargo.toml
petr-profiling/src/: lib.rs
petr-resolve/: Cargo.toml
petr-resolve/src/: lib.rs  resolved.rs  resolver.rs
petr-stdlib/: Cargo.toml  pete.toml
petr-stdlib/src/: io.pt  lib.rs  list.pt  mem.pt  ops.pt
petr-typecheck/: Cargo.toml
petr-typecheck/src/: constraint_generation.rs  error.rs  lib.rs  pretty_printing.rs  solution.rs  tests.rs  typed_ast.rs  types.rs
petr-utils/: Cargo.toml
petr-utils/src/: common_types.rs  index_map.rs  lib.rs  sources.rs
petr-vm/: Cargo.toml
petr-vm/src/: lib.rs  tests.rs
src/: Compiler.hs
src/Compiler/: Ast.hs  Parser.hs  Sources.hs  Tokenizer.hs
stdlib/: pete.toml
stdlib/src/: io.pt  lib.rs  mem.petr  mem.pt  ops.pt
swim-ast/: Cargo.toml
swim-ast/src/: ast.rs  comments.rs  lib.rs  pretty_print.rs
swim-bind/: Cargo.toml
swim-bind/src/: binder.rs  impls.rs  lib.rs
swim-codegen/: Cargo.toml  output
swim-codegen/src/: lib.rs  main.rs
swim-fmt/: Cargo.toml
swim-fmt/src/: config.rs  constants.rs  ctx.rs  lib.rs  main.rs  tests.rs
swim-ir/: Cargo.toml
swim-ir/src/: error.rs  lib.rs  opcodes.rs
swim-manifest/: Cargo.toml
swim-manifest/src/: lib.rs
swim-parse/: Cargo.toml
swim-parse/src/: lexer.rs  lib.rs  parse_to_ast.rs  parser.rs  pretty_print.rs
swim-parse/src/lexer/: tests.rs
swim-parse/src/parser/: ast.rs  lexer.rs  tests.rs
swim-parse/src/parser/ast/: pretty_print.rs
swim-parse/src/parser/lexer/: tests.rs
swim-pkg/: Cargo.toml
swim-pkg/src/: lib.rs  manifest.rs
swim-profiling/: Cargo.toml
swim-profiling/src/: lib.rs
swim-resolve/: Cargo.toml
swim-resolve/src/: lib.rs  resolved.rs  resolver.rs
swim-typecheck/: Cargo.toml
swim-typecheck/src/: error.rs  lib.rs
swim-utils/: Cargo.toml
swim-utils/src/: common_types.rs  index_map.rs  lib.rs  sources.rs
swim-vm/: Cargo.toml
swim-vm/src/: lib.rs  main.rs
swimc/: Cargo.toml  tmp.swim
swimc/src/: main.rs
test/: Main.hs
wasm-compiler/: Cargo.toml  tmp
wasm-compiler/src/: lib.rs
