[workspace]
resolver = "2"
members = [
    "petr-parse",
    "petr-fmt",
    "petr-utils",
    "petr-cli",
    "petr-codegen",
    "petr-ast",
    "petr-typecheck",
    "petr-bind",
    "petr-resolve",
    "petr-ir",
    "petr-vm",
    "petr-pkg",
    "petr-profiling", 
    "petr-api",
    "petr-playground",
    "petr-stdlib",
    ]
