[workspace]
resolver = "2"
members = [
    "petr-parse",
    "petr-fmt",
    "petr-utils",
    "petr-cli",
    "petr-codegen",
    "petr-ast",
    "petr-typecheck",
    "petr-bind",
    "petr-resolve",
    "petr-ir",
    "petr-vm",
    "petr-pkg",
    "petr-profiling", 
    "petr-api",
    "petr-playground",
    "petr-stdlib",
    "petr-lower"
]
 
[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://petr.sh"
license = "MIT"
repository = "https://github.com/sezna/petr"
authors = ["Alex Hansen <alex@alex-hansen.com>"]
