[package]
name = "pete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
petr-api = { "path" = "../petr-api", features = ["fancy"]  }
petr-profiling = { "path" = "../petr-profiling" }
miette = { version = "5.10", optional = true }
thiserror = "1.0"
toml = "0.8"
termcolor = { version = "1.4", optional = true }

