[package]
name = "petr-api"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

description = "re-exports of useful APIs for the petr compiler"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-parse = { "path" = "../petr-parse", version = "0.1.0" }
petr-utils = { "path" = "../petr-utils", optional = true, version = "0.1.0" }
petr-vm = { "path" = "../petr-vm", version = "0.1.0" }
petr-ir = { "path" = "../petr-ir", version = "0.1.0" }
petr-fmt = { path = "../petr-fmt", version = "0.1.0" }
petr-typecheck = { "path" = "../petr-typecheck", version = "0.1.0" }
petr-resolve = { "path" = "../petr-resolve", version = "0.1.0", optional = true }
petr-pkg = { "path" = "../petr-pkg", version = "0.1.0", optional = true }
termcolor = { version = "1.4", optional = true }
petr-profiling = { path = "../petr-profiling", version = "0.1.0" }
miette = { version = "5.10", optional = true }
thiserror = "1.0"
toml = "0.8"

[features]
debug = ["petr-utils/debug", "petr-resolve/debug"]
no_std = ["dep:petr-utils", "dep:petr-resolve", "dep:miette"]
fancy = ["miette/fancy"]
default = ["dep:petr-utils", "dep:petr-resolve", "dep:miette", "termcolor", "petr-pkg"]
