[package]
name = "petr-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-utils = { path = "../petr-utils" }
petr-ast = { path = "../petr-ast" }


[dev-dependencies]
expect-test = "1.5.0"
petr-parse = { path = "../petr-parse" }
