[package]
name = "petr-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

license.workspace = true
description = "command line tool for compiling petr code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
petr-api = { "path" = "../petr-api", features = ["fancy", "default"]  }
petr-profiling = { "path" = "../petr-profiling" }
petr-resolve = { "path" = "../petr-resolve" }
petr-typecheck = { "path" = "../petr-typecheck" }
thiserror = "1.0"
toml = "0.8"
termcolor = { version = "1.4" }
petr-pkg = { "path" = "../petr-pkg" }
petr-stdlib = { "path" = "../petr-stdlib" }

[[bin]]
name = "pete"
path = "src/main.rs"
