[package]
name = "petr-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

license.workspace = true
description = "command line tool for compiling petr code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
petr-api = { "path" = "../petr-api", features = ["fancy", "default"], version = "0.1.0"  }
petr-profiling = { "path" = "../petr-profiling", version = "0.1.0" }
petr-resolve = { "path" = "../petr-resolve", version = "0.1.0" }
petr-typecheck = { "path" = "../petr-typecheck", version = "0.1.0" }
thiserror = "1.0"
toml = "0.8"
termcolor = { version = "1.4" }
petr-pkg = { "path" = "../petr-pkg", version = "0.1.0" }
petr-stdlib = { "path" = "../petr-stdlib", version = "0.1.0" }

[[bin]]
name = "pete"
path = "src/main.rs"
