[package]
name = "petr-codegen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Codegen stage of the petr compiler" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-ir = { path = "../petr-ir" }

cranelift = "0.108.1"
cranelift-native = "0.108.1"
# cranelift-reader = "0.108.1"
cranelift-object = { version = "0.108.1" }
cranelift-module = "0.108.1"

miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.61"
