[package]
name = "petr-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-parse = { path = "../petr-parse" }
petr-utils = { path = "../petr-utils" }
petr-ast = { path = "../petr-ast" }
structopt = { version = "0.3.26", features = ["color"] }

[dev-dependencies]
expect-test = "1.5.0"
