[package]
name = "petr-ir"
version = "0.1.0"
edition = "2021"
description = "target agnostic IR for the petr language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-utils = { path = "../petr-utils", optional = true }
petr-typecheck = { path = "../petr-typecheck" }
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.61"

[dev-dependencies]
petr-parse = { path = "../petr-parse" }
expect-test = "1.5.0"
petr-resolve = { path = "../petr-resolve" }

[features]
debug = ["petr-utils/debug"]
default = ["dep:petr-utils"]
