[package]
name = "petr-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
miette = { version = "7.2.0", features = ["fancy"] }
petr-utils = { path = "../petr-utils" }
thiserror = "1.0.61"
petr-ast = { path = "../petr-ast" }

[dev-dependencies]
expect-test = "1.5.0"
