[package]
name = "petr-parse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "parser for the petr language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
miette = { version = "5.10", features = ["fancy"] }
petr-utils = { path = "../petr-utils" }
thiserror = "1.0.61"
petr-ast = { path = "../petr-ast" }

[dev-dependencies]
expect-test = "1.5.0"
