[package]
name = "petr-pkg"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

license.workspace = true
description = "package management for the petr language"

[dependencies]
bcrypt = "0.15.1"
blake3 = "1.5.1"
dirs = "5.0.1"
git2 = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
petr-fmt = { path = "../petr-fmt", version = "0.1.0" }
thiserror = "1.0.61"
termcolor = "1.4.1"
