[package]
name = "petr-profiling"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

license.workspace = true
description = "tools for profiling the performance of the petr compiler"

[dependencies]
cli-table = "0.4"
num-format = "0.4.4"
