[package]
name = "petr-resolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-ast = { path = "../petr-ast" }
petr-bind = { path = "../petr-bind" }
petr-utils = { path = "../petr-utils", optional = true }
thiserror = "1.0.61"

[dev-dependencies]
petr-parse = { path = "../petr-parse" }
expect-test = "1.5.0"

[features]
debug = ["petr-utils/debug"]
default = ["dep:petr-utils"]
