[package]
name = "petr-resolve"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "resolution stage of the petr compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.13.0"
petr-ast = { path = "../petr-ast" }
petr-bind = { path = "../petr-bind" }
petr-utils = { path = "../petr-utils", optional = true }
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.61"

[dev-dependencies]
petr-parse = { path = "../petr-parse" }
expect-test = "1.5.0"

[features]
debug = ["petr-utils/debug"]
default = ["dep:petr-utils"]
