[package]
name = "petr-resolve"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

license.workspace = true
description = "resolution stage of the petr compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.13.0"
petr-ast = { path = "../petr-ast", version = "0.1.0" }
petr-bind = { path = "../petr-bind", version = "0.1.0" }
petr-utils = { path = "../petr-utils", version = "0.1.0", optional = true }
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.61"

[dev-dependencies]
petr-parse = { path = "../petr-parse", version = "0.1.0" }
expect-test = "1.5.0"

[features]
debug = ["petr-utils/debug"]
default = ["dep:petr-utils"]
