[package]
name = "petr-typecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petr-utils = { path = "../petr-utils" }
petr-resolve = { path = "../petr-resolve" }
petr-bind = { path = "../petr-bind" }
polytype = "7.0.1"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.62"


[dev-dependencies]
petr-parse = { path = "../petr-parse" }
expect-test = "1.5.0"
