[package]
name = "petr-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "common utilities for the petr compiler and tooling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.5.0", optional = true }
miette = { version = "5.10" }

[features]
debug = ["lazy_static"]
