[package]
name = "petr-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

license.workspace = true
description = "common utilities for the petr compiler and tooling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.5.0", optional = true }
miette = { version = "5.10" }

[features]
debug = ["lazy_static"]
