[package]
name = "petr-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
petr-ir = { path = "../petr-ir" }
petr-utils = { path = "../petr-utils" }
thiserror = "1.0.61"

[dev-dependencies]
petr-parse = { path = "../petr-parse" }
expect-test = "1.5.0"
petr-resolve = { path = "../petr-resolve" }
petr-typecheck = { path = "../petr-typecheck" }
