[package]
name = "swim-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swim-utils = { path = "../swim-utils" }
swim-ast = { path = "../swim-ast" }


[dev-dependencies]
expect-test = "1.5.0"
swim-parse = { path = "../swim-parse" }
