[package]
name = "swim-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swim-parse = { path = "../swim-parse" }
swim-utils = { path = "../swim-utils" }
swim-ast = { path = "../swim-ast" }
structopt = { version = "0.3.26", features = ["color"] }

[dev-dependencies]
expect-test = "1.5.0"
