[package]
name = "swim-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"
swim-utils = { path = "../swim-utils" }
swim-typecheck = { path = "../swim-typecheck" }

[dev-dependencies]
swim-parse = { path = "../swim-parse" }
expect-test = "1.5.0"
swim-resolve = { path = "../swim-resolve" }
