[package]
name = "swim-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expect-test = "1.5.0"
logos = "0.14.0"
miette = { version = "7.2.0", features = ["fancy"] }
ouroboros = "0.18.4"
swim-utils = { path = "../swim-utils" } 
thiserror = "1.0.61"
