[package]
name = "swim-resolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swim-ast = { path = "../swim-ast" }
swim-bind = { path = "../swim-bind" }
swim-utils = { path = "../swim-utils", optional = true }
thiserror = "1.0.61"

[dev-dependencies]
swim-parse = { path = "../swim-parse" }
expect-test = "1.5.0"

[features]
debug = ["swim-utils/debug"]
default = ["dep:swim-utils"]
