[package]
name = "swim-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"

[features]
debug = ["lazy_static"]
