[package]
name = "swimc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
swim-parse = { "path" = "../swim-parse" }
swim-utils = { "path" = "../swim-utils" }
swim-vm = { "path" = "../swim-vm" }
swim-ir = { "path" = "../swim-ir" }
swim-fmt = { path = "../swim-fmt" }
swim-typecheck = { "path" = "../swim-typecheck" }
swim-resolve = { "path" = "../swim-resolve" }
swim-pkg = { "path" = "../swim-pkg" }
swim-profiling = { path = "../swim-profiling" }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"
toml = "0.8.14"
